[gd_scene load_steps=7 format=3 uid="uid://b6txnvg0anq2e"]

[ext_resource type="Script" path="res://scripts/distillery.gd" id="1_v10g5"]
[ext_resource type="Texture2D" uid="uid://cilbjn5jhgj1w" path="res://content/images/distillery-t.png" id="2_g47ye"]
[ext_resource type="PackedScene" uid="uid://chv6qeqta4eot" path="res://scenes/prefabs/container.tscn" id="2_l51i3"]
[ext_resource type="Texture2D" uid="uid://dful5kmhtcxmm" path="res://content/images/plus-t.png" id="3_8wrvh"]
[ext_resource type="Texture2D" uid="uid://h01ytmr31lmw" path="res://content/images/minus-t.png" id="4_kldqf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sd000"]
size = Vector2(288, 151)

[node name="Distillery" type="Node2D"]
script = ExtResource("1_v10g5")

[node name="temperature_timer_left" type="Timer" parent="."]

[node name="temperature_timer_right" type="Timer" parent="."]

[node name="gases_movement_timer" type="Timer" parent="."]

[node name="distillery_sprite" type="Sprite2D" parent="."]
position = Vector2(741, 302)
scale = Vector2(0.899773, 0.899773)
texture = ExtResource("2_g47ye")

[node name="increase_temperature_right" type="Button" parent="distillery_sprite"]
offset_left = 101.136
offset_top = 221.167
offset_right = 349.136
offset_bottom = 469.167
scale = Vector2(0.230493, 0.230493)
action_mode = 0
icon = ExtResource("3_8wrvh")

[node name="decrease_temperature_right" type="Button" parent="distillery_sprite"]
offset_left = -53.3469
offset_top = 221.167
offset_right = 194.653
offset_bottom = 469.167
scale = Vector2(0.179374, 0.179374)
icon = ExtResource("4_kldqf")

[node name="temperature_display_right" type="RichTextLabel" parent="distillery_sprite"]
anchors_preset = -1
anchor_left = 0.285
anchor_top = 0.876
anchor_right = 0.581
anchor_bottom = 0.958
offset_left = -498.861
offset_top = -507.665
offset_right = -685.775
offset_bottom = -477.242
scale = Vector2(0.510987, 0.510987)
bbcode_enabled = true
text = "[center][font_size=40]295K[/font_size]
[font_size=30](100K)[/font_size][/center]"
scroll_active = false
text_direction = 1

[node name="increase_temperature_left" type="Button" parent="distillery_sprite"]
offset_left = -227.835
offset_top = 252.286
offset_right = 20.1648
offset_bottom = 500.286
scale = Vector2(0.230493, 0.230493)
action_mode = 0
icon = ExtResource("3_8wrvh")

[node name="decrease_temperature_left" type="Button" parent="distillery_sprite"]
offset_left = -513.463
offset_top = 234.504
offset_right = -265.463
offset_bottom = 482.504
scale = Vector2(0.179374, 0.179374)
icon = ExtResource("4_kldqf")

[node name="temperature_display_left" type="RichTextLabel" parent="distillery_sprite"]
anchors_preset = -1
anchor_left = 0.285
anchor_top = 0.876
anchor_right = 0.581
anchor_bottom = 0.958
offset_left = -938.972
offset_top = -476.546
offset_right = -946.236
offset_bottom = -446.938
scale = Vector2(0.510987, 0.510987)
bbcode_enabled = true
text = "[center][font_size=40]295K[/font_size]
[font_size=30](100K)[/font_size][/center]"
scroll_active = false
text_direction = 1

[node name="container_right" parent="." instance=ExtResource("2_l51i3")]
position = Vector2(741, 129)

[node name="container_left" parent="." instance=ExtResource("2_l51i3")]
position = Vector2(0, 27)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(302, 340)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(134, 65.5)
shape = SubResource("RectangleShape2D_sd000")

[connection signal="pressed" from="distillery_sprite/increase_temperature_right" to="." method="_on_increase_temperature_right_button_pressed"]
[connection signal="pressed" from="distillery_sprite/decrease_temperature_right" to="." method="_on_decrease_temperature_right_button_pressed"]
[connection signal="pressed" from="distillery_sprite/increase_temperature_left" to="." method="_on_increase_temperature_left_button_pressed"]
[connection signal="pressed" from="distillery_sprite/decrease_temperature_left" to="." method="_on_decrease_temperature_left_button_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
